*********************************************************************************************
*                                  CHANGE LOG 1.0.2 - > 2.0.0                               *
*********************************************************************************************
* (4/25/2011) vsouhrada
     #177
        FIXED   : ISSUE - # 21: SplashScreen - Deprecated problem - JXImagePanel / ImagePainter -> http://juigle.origo.ethz.ch/issues/21.

     #176
        CHANGED : Switched PluginEnine on a newest version 2.0.0-RC1.
        FIXED   : Fixed JUIGLEApplication class - now in startApplication method is calling method from IMainFrame interface - initGUI.

     #173
       
        CHANGED : PerspectiveLoader and added a method on IPerspectiveLoader interface - merged from branch JUIGLE 1.0.2.
        ADDED   : Login Dialog Service (only basic version for current time)
        CHANGED : Removed classes from db_prepare package. Package db_prepare will not be as official part of the JUIGLE release - only working package is it.
     
 * (4/24/2011) vsouhrada
     #172
     
        ADDED   : Added a new database support files. Now you can create a database from XML file, retrieve database data via Dbi objects (Database Interface).
                : Next you can create a own database repository via DAO objects (Database Access Object).
        
 * (3/25/2011) vsouhrada
     #153
        ADDED   : Added a support for loading XML file and parse it. Now you can easily construct own XMLParser and parse xml file by calling a specific method. 
                  More information about this will be in documentation.
     #151
        CHANGED : Updated class JUIGLEFileUtils:
                   - add methods for creates a file and write the given content to it
        ADDED   : (merged from 1.0.2) 
                   - Fixed a bug in LanguageObservable when method updateText is calling - method setLocalizedResourceBundle is now calling before the method updateText.