@@ -5,7 +5,7 @@
 	<property name="projecthome" value="." />
 
 	<!-- jar version -->
-	<property name="version" value="2.0.0-RC1" />
+	<property name="version" value="2.0.0-RC2a" />
 
 	<!-- symbolic jar name -->
 	<property name="jarname" value="${ant.project.name}" />
@@ -62,12 +62,12 @@
 		<antcall target="autoclean" />
 	</target>
 
-	<!-- automatický úklid po kompilaci a vytvoření jaru-->
+	<!-- authomatic clean up after compilation and creating jar file-->
 	<target name="autoclean">
 		<delete dir="${build}" />
 	</target>
 
-	<!-- ručně prováděný úklid -->
+	<!-- manually clean up -->
 	<target name="clean">
 		<antcall target="autoclean" />
 		<delete dir="${jars}" />
